lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-all-of-any-of.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[bar (Number), foo (String)]
[bar (Number), foo (String)]
[foo (String)]
