lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-any-of.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[field_in_c, field_in_d]
[field_in_c, field_in_d]
[field_in_c, field_in_d]
[]
[field_in_c, field_in_d]
[field_in_c, field_in_d]
[field_in_c, field_in_d]
[field_in_c, field_in_d]
