lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-basic.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[a, b, config]
[foo, verified, version]
[foo, verified, version]
[foo, verified, version]
[really]
[really]

