lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-incomplete.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[config]
[foo, verified, version]
[foo, verified, version]
[foo, verified, version]
[really]
[really]
[foo, really, verified, version]
["has a space", lalala]
[falala]

