lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-match.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[p, payload, std]
[bar]
[bar]
[p, payload, std, y]
[]
