lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-nested.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[bar, baz, foo, one, std]
[bar, baz, foo, std, two]
[bar, baz, foo, std, three]

