lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-patterns-rec.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[extra, foo]
[bar, more]
[baz, most]
[bar (Dyn), more]
[baz, most]
[baz, most]
[foo]
[bar]
[baz]
[inner, innermost, outer, std]
[extra, foo, inner, innermost, outer, std]
[bar, extra, foo, inner, innermost, more, outer, std]
[inner, innermost, outer, std]
