lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__completion-patterns.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[extra, foo]
[bar, more]
[baz, most]
[bar, more]
[baz, most]
[baz, most]

