lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__diagnostics-basic.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[1:8-1:14: "expected type", 1:17-1:20: "contract broken by the value of `num`", 1:17-1:20: "applied to this expression", 2:9-2:12: "contract broken by the value of `num2`", 2:9-2:12: "applied to this expression", 3:13-3:19: "expected type"]
