lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__diagnostics-import-missing-file.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[0:8-0:28: "import of missing.ncl failed: could not find import (looked in [/])", 0:8-0:28: "imported here"]
