lsp/nls/tests/snapshots/main__lsp__nls__tests__inputs__diagnostics-import-parse-error.ncl.snap
---
source: lsp/nls/tests/main.rs
expression: output
---
[0:8-0:32: "import of /unparseable.ncl failed: This import could not be resolved because its content could not be parsed as Nickel.", 0:8-0:32: "imported here"]
